@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.xtv-saf" version="1.2.0" name="xTV-SAF"	provider-name="Wyrm">
+<addon id="skin.xtv-saf" version="1.2.1" name="xTV-SAF"	provider-name="Wyrm">
 	<requires>
 		<import addon="xbmc.gui" version="3.00"/>
 		<import addon="script.artwork.downloader" version="1.0.1" optional="true"/>
@@ -13,7 +13,7 @@
 	</extension>
 	<extension point="xbmc.addon.metadata">
 		<summary>A family friendly remake of CHI3f's xTV skin</summary>
-		<description>xTV-SAF is a fork of xTV to include the latest xbmc features in a Spouse friendly manner.</description>
+		<description>xTV-SAF is a 'Front Row' like skin for XBMC. It provides a number of updated features not available in the original AppleTV interface and builds on CHI3f's xTV skin to include new features of XBMC Eden. All this in a simple, Spouse Acceptable form (Factor) that is easy for kids and adults to find what they are looking for.</description>
 		<disclaimer></disclaimer>
 		<platform>all</platform>
 	</extension>
